2002-07-29  Yoann Vandoorselaere  <yoann@mandrakesoft.com>

	Thanks to DINH Viet Hoa <dinh.viet.hoa@free.fr>, 
	for reporting all theses problem:
	
	* src/include/queue.h: 
	rename queue_t to lml_queue_t to avoid namespace
	conflict.

	* src/file-server.c (read_logfile): 
	clearerr_unlocked is not standard. Use clearerr.

	* src/log-common.c: include string.h.

2002-07-11  Yoann Vandoorselaere  <yoann@prelude-ids.org>

	* plugins/debug/debug.c (set_debug_state): 
	(set_output): fix the latest prelude getopt API
	change.

2002-06-27  Yoann Vandoorselaere  <yoann@mandrakesoft.com>

	* fit latest prelude-getopt API change.

2002-06-26  Yoann Vandoorselaere  <yoann@mandrakesoft.com>

	* plugins/simple/simple.c (read_multiline): 
	moved to libprelude, common function.
	(parse_ruleset): use prelude_read_multiline().

2002-06-16  Yoann Vandoorselaere  <yoann@mandrakesoft.com>

	* plugins/simple/simple.c: 
	Included patch from Arnaud Guignard <arnaud.guignard@free.fr> 
	to handle the process IDMEF object.

2002-06-14  Yoann Vandoorselaere  <yoann@mandrakesoft.com>

	* Makefile.am (install-data-local): 
	use $(DESTDIR) as the top prefix for installing stuff.

2002-06-13  Yoann Vandoorselaere  <yoann@mandrakesoft.com>

        Patch from Arnaud Guignard <arnaud.guignard@free.fr> :

	* plugins/simple/simple.c (parse_ruleset):
	fixed a bug when a TAB was at a beginning of a line in a
	multiline rule.

2002-06-10  Yoann Vandoorselaere  <yoann@mandrakesoft.com>

	* configure.in: only enable gtkdoc if requested.

	* plugins/simple/ruleset/simple.rules (include): 
	include grsecurity.rules.

	* plugins/simple/simple.c (read_multiline): 
	new function, handle multiline (line ending with \).

	(parse_ruleset): use read_multiline().
	(parse_ruleset): handle TAB at the begining of the line.
	

2002-06-06  Yoann Vandoorselaere  <yoann@mandrakesoft.com>

	* src/lml-alert.c (generate_analyzer): 
	generate analyzer. Use prelude_analyzer_fill_infos().